# pyio-cookiecutter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json
.github/workflows/: doc.yml  publish.yml  release.yml  test.yml
docs/source/: conf.py  index.md  user-guide.md
docs/source/stubs/: features-stub.md  parameters-stub.md  quickstart-stub.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.__package_slug }}/: README.md  pyproject.toml
{{ cookiecutter.__package_slug }}/.github/workflows/: doc.yml  release.yml  test.yml
{{ cookiecutter.__package_slug }}/docs/: conf.py
{{ cookiecutter.__package_slug }}/tests/: io_test.py  test_{{ cookiecutter.__package_slug }}.py
